# gachatui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.vim/: coc-settings.json
src/: Main.cpp
src/Gacha/: Colors.cpp  Gacha.cpp  Gacha.hpp  cli.cpp  cli.hpp  gachaui.cpp  gachaui.hpp  std_libs.hpp
